# batcher

./: .gitignore  Cargo.toml  README.md  config.toml
batcher/: Cargo.toml  config.example.toml
batcher/src/: batch.rs  bitcoind.rs  broker.rs  config.rs  events.rs  lib.rs  logger.rs  messages.rs  node.rs  storage.rs  types.rs  wallet.rs
batcher/tests/: common.rs  config.rs  multisig.rs  node.rs
cli/: Cargo.toml
cli/src/: commands.rs  main.rs
examples/configs/: config0.toml  config1.toml  config2.toml
src/: batch.rs  bitcoind.rs  broker.rs  config.rs  lib.rs  logger.rs  main.rs  messages.rs  node.rs  persister.rs  types.rs  wallet.rs
tests/: common.rs  config.rs  multisig.rs  node.rs
