[package]
name = "batcher"
version = "0.1.0"
edition = "2021"

[lib]
name = "batcher"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"

lightning = { version = "0.1.2", features = ["std"] }
lightning-net-tokio = "0.1.0"

bitcoincore-rpc = { version = "0.19.0" }
bdk_wallet = { version = "1.2.0", features = ["rusqlite"] }

bitcoin = { version = "0.32.2", default-features = false, features = ["secp-recovery"] }
hex = "0.4.3"
