[workspace.package]
homepage = "https://arturgontijo.github.io/batcher"
repository = "https://github.com/arturgontijo/batcher.git"
authors = ["Artur Gontijo <arturgontijo@lol>"]
edition = "2021"

[workspace]
resolver = "2"

members = [
	"batcher",
	"cli",
]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"

lightning = { version = "0.1.4", features = ["std"] }
lightning-net-tokio = "0.1.0"

bitcoincore-rpc = { version = "0.19.0" }
bdk_wallet = { version = "1.2.0", features = ["rusqlite"] }

bitcoin = { version = "0.32.2", default-features = false, features = ["secp-recovery"] }
bip39 = "2.1.0"
serde = "1.0.219"
toml = { version ="0.8.21", features = ["parse"] }
bitcoind = "0.36.1"

chrono = { version = "0.4", features = ["clock"] }

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
