[package]
name = "batcher"
version = "0.0.12"
homepage.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
rand = { workspace = true }

lightning = { workspace = true }
lightning-net-tokio = { workspace = true }

bitcoincore-rpc = { workspace = true }
bdk_wallet = { workspace = true }

bitcoin = { workspace = true }
bip39 = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
bitcoind = { workspace = true }

chrono = { workspace = true }
