[package]
name = "cli"
version = "0.0.2"
homepage.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
batcher = { path = "../batcher" }
rustyline = { version = "12", features = ["derive"] }
tokio.workspace = true
bitcoin.workspace = true
bitcoincore-rpc = { workspace = true }
